update comment to message

--- a/add-message.html
+++ b/add-message.html
@@ -6,10 +6,10 @@
   <body>
     <section class="container">
       <h1 class="page-header">
-        Edit comment
+        Add a message
       </h1>
     </section>
     <script type="text/javascript" src="js/shared.js"></script>
-    <script type="text/javascript" src="js/edit-comment.js"></script>
+    <script type="text/javascript" src="js/add-message.js"></script>
   </body>
 </html>
