--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
       <h1 class="page-header">
         Code School Message Board
         <button class="btn btn-primary pull-right" type="button">Refresh</button>
-        <button class="btn btn-success pull-right" type="button" onclick="addComment()">Add a comment</button>
+        <button class="btn btn-success pull-right" type="button" onclick="addMessage()">Add a message</button>
       </h1>
-      <section id="commentsContainer"></section>
+      <section id="messagesContainer"></section>
     </section>
     <div id="loading">
       <div class="loading-text">
         <img src="/img/spinner.svg" height="75">
-        <p>Loading comments!</p>
+        <p>Loading messages!</p>
       </div>
     </div>
     <script type="text/javascript" src="js/moment.js"></script>
