--- a/edit-message.html
+++ b/edit-message.html
@@ -6,10 +6,10 @@
   <body>
     <section class="container">
       <h1 class="page-header">
-        Add a comment
+        Edit message
       </h1>
     </section>
     <script type="text/javascript" src="js/shared.js"></script>
-    <script type="text/javascript" src="js/add-comment.js"></script>
+    <script type="text/javascript" src="js/edit-message.js"></script>
   </body>
 </html>
