--- a/add-messageTable.html
+++ b/add-messageTable.html
@@ -1,19 +1,24 @@
 <html>
+
   <head>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
+
+
   <body>
 
     <section class="container">
-      <h1 class="page-header">
-        Edit message
-      </h1>
+      <h1 class="page-header">Add a message</h1>
     </section>
 
-    
     <section class="container">
-      <form name="editMessageForm" onsubmit="return editMessage()">
+      <form name="addMessageForm" onsubmit="return addMessage()">
+
+        <div class="inputDiv">
+          <label for="createdBy">Your name:</label>
+          <input type="text" id="createdBy" name="createdBy" value="" placeholder="ex. John Smith">
+        </div>
 
         <div class="inputDiv">
           <label for="commentText">Your comment:</label>
@@ -26,7 +31,7 @@
         </div>
 
         <div class="inputDiv">
-          <input type="submit" name="submit" value="Update!">
+          <input type="submit" name="submit" value="Post it!">
         </div>
 
       </form>
@@ -34,10 +39,10 @@
 
 
 
-
-
-
     <script type="text/javascript" src="js/shared.js"></script>
-    <script type="text/javascript" src="js/edit-message.js"></script>
+    <script type="text/javascript" src="js/add-messageTable.js"></script>
+
   </body>
+
+
 </html>
