--- a/indexTable.html
+++ b/indexTable.html
@@ -23,7 +23,19 @@
       </h1>
 
 
-      <section id="messagesContainer"></section>
+      <section id="messagesContainer">
+        <table id="mainTable">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Message</th>
+              <th>Datetime</th>
+              <th class="centeredTitle">Action</th>
+            </tr>
+          </thead>
+          <tbody id="tableBody"></tbody>
+        </table>
+      </section>
 
       
     </section>
@@ -37,7 +49,7 @@
 
     <script type="text/javascript" src="js/moment.js"></script>
     <script type="text/javascript" src="js/shared.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/indexTable.js"></script>
     
   </body>
 </html>
