--- a/edit-messageTable.html
+++ b/edit-messageTable.html
@@ -38,6 +38,6 @@
 
 
     <script type="text/javascript" src="js/shared.js"></script>
-    <script type="text/javascript" src="js/edit-message.js"></script>
+    <script type="text/javascript" src="js/edit-messageTable.js"></script>
   </body>
 </html>
